# TG_FASTAPI

./: README.md  pyproject.toml
TG_BOT/: config.py  main.py
bot/: alembic.ini  config.py  main.py
bot/fsm_states/: registration_states.py
bot/keyboards/: keyboard_from_start.py
bot/keyboards/all_keyboards/: keyboard_for_cancel.py
bot/keyboards/inline_buttons/: inline_button.py
bot/keyboards/keyboard_buttons/: keyboard_button.py
bot/migrations/: env.py
bot/migrations/versions/: d50312c9cc0e_.py
bot/models/: models.py
bot/routers/: cancel_script.py  config_for_routers.py
bot/routers/registration_router/: register.py
bot/routers/start_router/: start.py
src/: main.py
src/insults/: insult.py  lang.py
src/quotes/: quote.py
