[tool.poetry]
name = "tg-fastapi"
version = "0.1.0"
description = ""
authors = ["Yaroslav <yarikbritov@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
SQLAlchemy = "^2.0.23"
alembic = "^1.13.0"
black = "^23.11.0"
aiogram = "^3.2.0"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.1.0"
requests = "^2.31.0"
ngrok = "^0.12.1"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
